--- a/product-webapp/webapp/src/app/components/message/msg/msg.component.html
+++ b/product-webapp/webapp/src/app/components/message/msg/msg.component.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-danger" (click) = "deleteMessage(user.reciverName, user.senderName )">Danger</button>
+<button type="button" class="btn btn-danger" (click) = "deleteMessage(user.reciverName, user.senderName)">Close Chat</button>
 <div class="container">
 <div class= "row" style="background-color: rgb(215, 235, 241) !important; margin-top: 15px;">
   <div class="container" >
