--- a/product-webapp/webapp/src/app/components/patient-dashboard/doctor-cards/doctor-cards.component.html
+++ b/product-webapp/webapp/src/app/components/patient-dashboard/doctor-cards/doctor-cards.component.html
@@ -17,7 +17,7 @@
                 <mat-card-title>{{doc.fullName}}</mat-card-title>
                 <mat-card-subtitle>{{doc.specialization}}</mat-card-subtitle>
             </mat-card-header>
-            <button mat-flat-button color="primary" style="margin-right: 10px">Chat</button>
+            <button mat-flat-button color="primary" style="margin-right: 10px" [routerLink]="['/message',doc.emailId]">Chat</button>
             <button mat-flat-button color="primary">Connect</button>
             </mat-card>
     </div>
