close sos request

--- a/product-webapp/webapp/src/app/components/close-sos-equipment/close-sos-equipment.component.html
+++ b/product-webapp/webapp/src/app/components/close-sos-equipment/close-sos-equipment.component.html
@@ -193,9 +193,9 @@
       </tbody>
       </table>
   
-      <button class="btn btn-primary ml-8 mr-4" (click)="close()">Close SOS</button>
+      <!-- <button class="btn btn-primary ml-8 mr-4" (click)="close()">Close SOS</button> -->
       <button class="btn btn-primary ml-8 mr-4" (click)="pass()">Pass SOS</button>
-      <button class="btn btn-primary" (click)="search()">Search Medicine</button>
+      <button class="btn btn-primary" (click)="search()">Search Equipment</button>
   </div>
   </mat-card>
   
