--- a/product-webapp/webapp/src/app/components/close-sos/close-sos.component.html
+++ b/product-webapp/webapp/src/app/components/close-sos/close-sos.component.html
@@ -207,7 +207,7 @@
         </tbody>
       </table>
   
-      <button class="btn btn-primary ml-8 mr-4" (click)="close()">Close SOS</button>
+      <!-- <button class="btn btn-primary ml-8 mr-4" (click)="close()">Close SOS</button> -->
       <button class="btn btn-primary ml-8 mr-4" (click)="pass()">Pass SOS</button>
       <button class="btn btn-primary" (click)="search()">Search Medicine</button>
   </div>
