--- a/product-webapp/webapp/src/app/components/sos-request/sos-request.component.html
+++ b/product-webapp/webapp/src/app/components/sos-request/sos-request.component.html
@@ -169,7 +169,7 @@
                 </div>
               </div>
 
-              <button mat-raised-button color="primary" [disabled]="loginForm.form.invalid" (click)="Create()" routerLink="/sos">
+              <button mat-raised-button color="primary" [disabled]="loginForm.form.invalid" (click)="Create()" routerLink="/#/sos">
                   Submit
               </button>
           </mat-card-content>
