--- a/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-verify/warroom-verify.component.html
+++ b/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-verify/warroom-verify.component.html
@@ -2,13 +2,13 @@
     <mat-card>
         <mat-list role="list">
             <mat-list-item role="listitem">
-                <button style="margin-left: 40px;" mat-raised-button color="primary" routerLink="/addmedicine">Verify Medicine</button>
+                <button style="margin-left: 40px;" mat-raised-button color="primary" routerLink="/#/addmedicine">Verify Medicine</button>
             </mat-list-item>
             <mat-list-item role="listitem">
-                <button style="margin-left: 40px;" mat-raised-button color="primary" routerLink="/addequipment">Verify Medical Equipment</button>
+                <button style="margin-left: 40px;" mat-raised-button color="primary" routerLink="/#/addequipment">Verify Medical Equipment</button>
             </mat-list-item>
             <mat-list-item role="listitem">
-                <button style="margin-left: 40px;" mat-raised-button color="primary" routerLink="/addbed">Verify Bed</button>
+                <button style="margin-left: 40px;" mat-raised-button color="primary" routerLink="/#/addbed">Verify Bed</button>
             </mat-list-item>
           </mat-list>
     </mat-card>
