--- a/product-webapp/webapp/src/app/components/doctor-registration/doctor-registration.component.html
+++ b/product-webapp/webapp/src/app/components/doctor-registration/doctor-registration.component.html
@@ -42,7 +42,8 @@
         <mat-form-field appearance="outline" style="width: 230px;">
           <mat-label>Phone Number</mat-label>
           <input matInput type="number" formControlName="phoneNumber" required minlength="10" maxlength="10">
-          <mat-error *ngIf="profileForm.get('phoneNumber')?.invalid && profileForm.get('phoneNumber')?.touched">Required Field</mat-error>
+          <mat-error *ngIf="profileForm.get('phoneNumber').errors?.pattern && profileForm.get('phoneNumber')?.touched">Please enter a valid phone number</mat-error>
+          <mat-error *ngIf="profileForm.get('phoneNumber').errors?.required && profileForm.get('phoneNumber')?.touched">Required Field</mat-error>
         </mat-form-field><br>
 
 
