--- a/product-webapp/webapp/src/app/components/search-dialog/search-dialog.component.html
+++ b/product-webapp/webapp/src/app/components/search-dialog/search-dialog.component.html
@@ -1,9 +1,17 @@
-<div mat-dialog-title>
-  Search for the requirement in {{city}}:
+<div mat-dialog-title fxLayout="row" fxLayoutAlign="space-between center" >
+  <div>
+    Search for the requirement in {{city}}
+  </div>
+  <div>
+    <button mat-icon-button color="accent" (click)="closeDialog()" matTooltip="Close modal">
+      <mat-icon>close</mat-icon>
+    </button>
+  </div>
 </div>
 <div mat-dialog-content>
+  <p><strong>Requirements are:</strong></p>
   <div *ngFor="let req of requirement; let i =index">
-    <strong>Requirements {{i+1}}= {{req.requirementName}}: {{req.requirementQuantity}}: {{req.unitOfMeasure}}</strong>
+    Requirements {{i+1}}= {{req.requirementName}}: {{req.requirementQuantity}}: {{req.unitOfMeasure}}
   </div>
 
   <div fxLayout="row" fxLayoutAlign="space-around center" [formGroup]="searchForm">
@@ -21,12 +29,20 @@
         <mat-error>Should be filled</mat-error>
       </mat-form-field>
     </div>
+    <div fxFlex="10%">
+      <div style="margin-bottom: 50%;">
+      <button mat-icon-button color="primary" [disabled]="!(searchForm.get('requirement').valid && searchForm.get('city').valid)" 
+      (click)="searchData()" matTooltip="Search requirement">
+        <mat-icon>search</mat-icon>
+      </button>
+    </div>
+    </div>
   </div>
-  <div fxLayoutAlign="center" class="scheduler-field">
+  <!-- <div fxLayoutAlign="center" class="scheduler-field">
     <button mat-raised-button color="primary"
       [disabled]="!(searchForm.get('requirement').valid && searchForm.get('city').valid)"
       (click)="searchData()">Search</button>
-  </div>
+  </div> -->
   <div *ngIf="showMessages" fxLayout="column" fxLayoutAlign="space-evenly stretch" style="margin:20px">
     <div fxFlex="90%" *ngFor="let message of messageArray">
       <mat-card class="mat-elevation-z8">
@@ -45,9 +61,8 @@
       </mat-form-field>
     </div>
   </div>
-  <div fxLayout="row" fxLayoutAlign="space-around center" class="scheduler-field">
+  <div fxLayout="row" fxLayoutAlign="end" class="scheduler-field">
     <button mat-raised-button color="primary" [disabled]="!searchForm.get('comment').valid" (click)="closeSOS()">Close
       SOS</button>
-    <button mat-raised-button color="primary" (click)="closeDialog()">Close</button>
   </div>
 </div>
