--- a/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
+++ b/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
@@ -84,32 +84,22 @@
   </mat-tab>
 
   <mat-tab label="Add Resources">
-
-    <div>
-      <mat-toolbar color="primary">
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
-          (click)="toggleSidebar()">
-          <mat-icon>menu</mat-icon>
-        </button>
-        <span>Resources</span>
-        <span class="example-spacer"></span>
-      </mat-toolbar>
-      <mat-sidenav-container>
-        <mat-sidenav style="width: 25%;" mode="side" [opened]="opened">
-          <mat-action-list>
-            <button mat-list-item routerLink="/war-room-dashboard/addmedicine" (click)="toggleSidebar()"> Add Medicine
-            </button>
-            <button mat-list-item routerLink="/war-room-dashboard/addequipment" (click)="toggleSidebar()"> Add Equipment
-            </button>
-            <button mat-list-item routerLink="/war-room-dashboard/addbed" (click)="toggleSidebar()"> Add Beds </button>
-          </mat-action-list>
-        </mat-sidenav>
-        <div mat-sidenav-content style="height: 90vh; margin-left: 35px; align-items: center;">
-          <router-outlet></router-outlet>
-        </div>
-      </mat-sidenav-container>
+  <div fxLayout="row" fxLayoutAlign="space-around center">
+    <div fxLayout="column" fxLayoutAlign="space-around stretch" fxFlex="20">
+      <button mat-raised-button [ngClass]="{'nav-button-active':addMed, 'nav-button-inactive':!addMed}" (click)="addMedres()">
+        Add Medicine </button>
+      <button mat-raised-button [ngClass]="{'nav-button-active':addEquip, 'nav-button-inactive':!addEquip}" (click)="addEquipRes()">
+        Add Equipment </button>
+      <button mat-raised-button [ngClass]="{'nav-button-active':addBed, 'nav-button-inactive':!addBed}" (click)="addBedRes()">
+        Add Beds </button>
     </div>
-  </mat-tab>
+    <div fxFlex="80">
+      <app-add-equipment *ngIf="addEquip"></app-add-equipment>
+      <app-add-medicine *ngIf="addMed"></app-add-medicine>
+      <app-add-bed *ngIf="addBed"></app-add-bed>
+    </div>
+  </div>
+</mat-tab>
 </mat-tab-group>
 
 
