--- a/product-webapp/webapp/src/app/components/doctor-message/doctor-message.component.css
+++ b/product-webapp/webapp/src/app/components/doctor-message/doctor-message.component.css
@@ -104,7 +104,8 @@ input,
 textarea,
 .item-input,
 .item-input-wrapper {
-  background: #64b5f6;
+  background: #fffefe;
+  border: 1px solid;
   height: 38px;
 }
 .text-input {
