--- a/product-webapp/webapp/src/app/components/footer/footer.component.html
+++ b/product-webapp/webapp/src/app/components/footer/footer.component.html
@@ -1,8 +1,6 @@
-<!-- Footer -->
+!-- Footer -->
 <footer class="text-center text-lg-start text-muted" style="background: #4154F1;">
     <!-- Section: Social media -->
-  
-  
     <!-- Section: Links  -->
     <section class="" style="color: white;">
       <div class="container text-center text-md-start mt-5">
@@ -19,49 +17,28 @@
             </p>
           </div>
           <!-- Grid column -->
-  
           <!-- Grid column -->
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Products
+              Doctors
             </h6>
             <p>
-              <a href="#!" class="text-reset">Angular</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">React</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Vue</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Laravel</a>
+              The most courageous yet vulnerable frontline workers
             </p>
           </div>
           <!-- Grid column -->
-  
           <!-- Grid column -->
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Useful links
+              Volunteers
             </h6>
             <p>
-              <a href="#!" class="text-reset">Pricing</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Settings</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Orders</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Help</a>
+              Exhibiting pure selflessness for the greater cause
             </p>
           </div>
           <!-- Grid column -->
-  
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
@@ -82,13 +59,21 @@
       </div>
     </section>
     <!-- Section: Links  -->
-  
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0); color: white;">
-      © 2021 Copyright:
+      :copyright: 2021 Copyright:
       <a class="text-reset fw-bold" href="#">kawach.com</a>
     </div>
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
+
+
+
+
+
+
+
+
+
 
