prometheus and spell check

--- a/product-webapp/webapp/src/app/components/header-tabs/header-tabs.component.html
+++ b/product-webapp/webapp/src/app/components/header-tabs/header-tabs.component.html
@@ -2,7 +2,7 @@
   <mat-tab label="Raise a Medical SOS Request">
     <app-sos-request></app-sos-request>
   </mat-tab>
-  <mat-tab label="Consult a doctor">
+  <mat-tab label="Consult a Doctor">
     <app-patient-dashboard></app-patient-dashboard>
   </mat-tab>
 </mat-tab-group>
