--- a/product-webapp/webapp/src/app/components/sos-request/sos-request.component.html
+++ b/product-webapp/webapp/src/app/components/sos-request/sos-request.component.html
@@ -154,8 +154,8 @@
 
                     <div class="col-md-4">
                       <mat-form-field class="example-full-width" appearance="fill">
-                        <mat-label>Unit of Mesures<span style="color: red !important">*</span></mat-label>
-                        <mat-select placeholder="Unit of Mesures" formControlName="unitOfMeasure">
+                        <mat-label>Unit of Measures<span style="color: red !important">*</span></mat-label>
+                        <mat-select placeholder="Unit of Measures" formControlName="unitOfMeasure">
                           <mat-option *ngFor="let uom of uoms" [value]="uom.value">
                             {{uom.viewValue}}
                           </mat-option>
