--- a/product-webapp/webapp/src/app/components/sos-request/sos-request.component.html
+++ b/product-webapp/webapp/src/app/components/sos-request/sos-request.component.html
@@ -68,7 +68,7 @@
             <mat-form-field class="example-full-width" appearance="fill">
               <mat-label> Hospitalised Status<span style="color: red !important">*</span></mat-label>
               <mat-select [(ngModel)]="user.hospitalised" [formControl]="hospitalFormControl">
-                <mat-option *ngFor="let hospitalised of hospitaliseds" [value]="hospitalised.viewValue">
+                <mat-option *ngFor="let hospitalised of hospitalised" [value]="hospitalised.viewValue">
                   {{hospitalised.viewValue}}
                 </mat-option>
               </mat-select>
@@ -104,7 +104,7 @@
                   </div>
                   <div class="d-flex flex-row-reverse bd-highlight">
                       <div class="example-button-container">
-                          <button type="button" class="btn btn-primary" [disabled]="patientForm.invalid" (click)="AddRequirment()">
+                          <button type="button" class="btn btn-primary" [disabled]="patientForm.invalid" (click)="AddRequirement()">
                               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-plus-fill" viewBox="0 0 16 16">
                                   <path d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM8.5 6v1.5H10a.5.5 0 0 1 0 1H8.5V10a.5.5 0 0 1-1 0V8.5H6a.5.5 0 0 1 0-1h1.5V6a.5.5 0 0 1 1 0z" />
                               </svg>
