--- a/product-webapp/webapp/src/app/components/login/login.component.html
+++ b/product-webapp/webapp/src/app/components/login/login.component.html
@@ -39,7 +39,7 @@
             
           </mat-form-field>
       </div>  
-      <div class="row" class="" style="text-align: center;">  
+      <div class="row"cdefilst style="text-align: center;">  
               
             <mat-form-field appearance="outline" style="width: 300px;">
               <mat-label for="password"> Password: </mat-label>
