--- a/product-webapp/webapp/src/app/components/update-medicine/update-medicine.component.html
+++ b/product-webapp/webapp/src/app/components/update-medicine/update-medicine.component.html
@@ -3,7 +3,8 @@
   <form>
     <div class="form-group">
       <label for="medicineName">Medicine Name:</label>
-      <input [(ngModel)]="user.medicineName" class="form-control" id="medicineName" name="medicineName" placeholder="Name"
+      <input [(ngModel)]="user.medicineName" class="form-control" id="medicineName" name="medicineName"
+             placeholder="Name"
              type="name">
     </div>
 
